feat: added header

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.11.0/axios.min.js"
         integrity="sha512-h9644v03pHqrIHThkvXhB2PJ8zf5E9IyVnrSfZg8Yj8k4RsO4zldcQc4Bi9iVLUCCsqNY0b4WXVV4UB+wbWENA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Photo Blog</title>
 </head>
 
 <body>
 
-    <header class="text-center"> 
-        <h1>ESTATE '24</h1>
+    <header class="text-center">
+        <h1 class="display-1 fw-bold pt-3">ESTATE '24</h1>
     </header>
 
     <script src="script.js"></script>
