feat: added html for cards

--- a/index.html
+++ b/index.html
@@ -17,10 +17,47 @@
 </head>
 
 <body>
-
-    <header class="text-center">
+    <!-- <img class="col-10" src="/imgs/cork.png"></img> -->
+    <header class="text-center pb-2">
         <h1 class="display-1 fw-bold pt-3">ESTATE '24</h1>
     </header>
+    <main class="d-flex flex-wrap justify-content-center gap-4 pt-5">
+        <div class="col-3 bg-light">
+            <figure class="mx-3">
+            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            </figure>
+        </div>
+
+        <div class="col-3 bg-light">
+            <figure class="mx-3">
+            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            </figure>
+        </div>
+
+        <div class="col-3 bg-light">
+            <figure class="mx-3">
+            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            </figure>
+        </div>
+
+        <div class="col-3 bg-light">
+            <figure class="mx-3">
+            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            </figure>
+        </div >
+
+        <div class="col-3 bg-light">
+            <figure class="mx-3">
+            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            </figure>
+        </div>
+
+        <div class="col-3 bg-light">
+            <figure class="mx-3">
+            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            </figure>
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
