--- a/index.html
+++ b/index.html
@@ -22,39 +22,39 @@
         <h1 class="display-1 fw-bold pt-3">ESTATE '24</h1>
     </header>
     <main class="d-flex flex-wrap justify-content-center gap-4 pt-5">
-        <div class="col-3 bg-light">
+        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
-            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-3 bg-light">
+        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
-            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-3 bg-light">
+        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
-            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-3 bg-light">
+        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
-            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
-            </figure>
-        </div >
-
-        <div class="col-3 bg-light">
-            <figure class="my-card mx-3">
-            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-3 bg-light">
+        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
-            <figcaption>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</figcaption>
+            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
+            </figure>
+        </div>
+
+        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+            <figure class="my-card mx-3">
+            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
     </main>
