feat: added css to rotate card on hover and pin disappear

--- a/index.html
+++ b/index.html
@@ -22,37 +22,37 @@
         <h1 class="display-1 fw-bold pt-3">ESTATE '24</h1>
     </header>
     <main class="d-flex flex-wrap justify-content-center gap-4 pt-5">
-        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
             <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
             <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
             <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
             <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
             <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
         </div>
 
-        <div class="col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
             <figure class="my-card mx-3">
             <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
             </figure>
