feat: added js to zoom photos on click

--- a/index.html
+++ b/index.html
@@ -12,53 +12,57 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Photo Blog</title>
 </head>
 
-<body>
- 
-    <header class="text-center pb-2">
-        <h1 class="display-1 fw-bold pt-3">ESTATE '24</h1>
-    </header>
-    <main class="d-flex flex-wrap justify-content-center gap-4 pt-5">
-        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
-            <figure class="my-card mx-3">
-            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
-            </figure>
-        </div>
+<body class="">
+    <div id="my-body">
+        <div id="zoom-container"></div>
+        <header class="text-center pb-2">
+            <h1 class="display-1 fw-bold pt-3">ESTATE '24</h1>
+        </header>
+        <main class="main-div d-flex flex-wrap justify-content-center gap-4 pt-5">
 
-        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
-            <figure class="my-card mx-3">
-            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
-            </figure>
-        </div>
+            <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+                <figure class="my-card mx-3">
+                    <img class="position-absolute pos" src="/imgs/pin.svg" alt="red pin">
+                </figure>
+            </div>
 
-        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
-            <figure class="my-card mx-3">
-            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
-            </figure>
-        </div>
+            <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+                <figure class="my-card mx-3">
+                    <img class="position-absolute pos" src="/imgs/pin.svg" alt="red pin">
+                </figure>
+            </div>
 
-        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
-            <figure class="my-card mx-3">
-            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
-            </figure>
-        </div>
+            <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+                <figure class="my-card mx-3">
+                    <img class="position-absolute pos" src="/imgs/pin.svg" alt="red pin">
+                </figure>
+            </div>
 
-        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
-            <figure class="my-card mx-3">
-            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
-            </figure>
-        </div>
+            <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+                <figure class="my-card mx-3">
+                    <img class="position-absolute pos" src="/imgs/pin.svg" alt="red pin">
+                </figure>
+            </div>
 
-        <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
-            <figure class="my-card mx-3">
-            <img class="position-absolute pos"src="/imgs/pin.svg" alt="red pin">
-            </figure>
-        </div>
-    </main>
+            <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+                <figure class="my-card mx-3">
+                    <img class="position-absolute pos" src="/imgs/pin.svg" alt="red pin">
+                </figure>
+            </div>
 
+            <div class="rot-div col-lg-3 position-relative col-md-5 col-sm-8 bg-light">
+                <figure class="my-card mx-3">
+                    <img class="position-absolute pos" src="/imgs/pin.svg" alt="red pin">
+                </figure>
+            </div>
+
+
+        </main>
+    </div>
     <script src="script.js"></script>
 </body>
 
